--- a/css/styles.css
+++ b/css/styles.css
@@ -240,30 +240,32 @@ Contact
     border-radius: 5px;
     padding-left: 10px;
 }
-.contact-btn{
+.contact-btn {
     position: relative;
     border: none;
-    background: linear-gradient(135deg,orange, tomato,red);
     padding: 10px 20px;
     color: whitesmoke;
     border-radius: 5px;
     cursor: pointer;
-    /* transform: skew(-30deg, 20deg); */
-    transition: all 1s ;
-}
-.contact-btn::after{
-    content: " ";
+    z-index: 9;
+    display: inline-block;
+    background: linear-gradient(135deg, orange, tomato, red);
+  }
+  .button-helper {
+    position: absolute;
+    z-index: -1;
     top: 0;
     left: 0;
-    position: absolute;
+    width: 100%;
+    height: 100%;
     opacity: 0;
-    background: linear-gradient(135deg,red,orange, tomato);
-    transition: all 1s;
-}
-.contact-btn:hover::after{
+    border-radius: 5px;
+    background: linear-gradient(135deg, red, orange, tomato);
+    transition: opacity 1s linear;
+  }
+  .contact-btn:hover .button-helper {
     opacity: 1;
-    /* color: rgb(26, 16, 1); */
-}
+  }
 /*------------------
 Footer
 --------------------*/
